--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/akominiak/CodersCamp-Project4#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
